--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   cloud_firestore: ^6.1.1
   google_sign_in: ^6.2.1
   go_router: ^17.0.1
+  flutter_secure_storage: ^10.0.0
+  encrypt: ^5.0.3
+  local_auth: ^3.0.0
 
 dev_dependencies:
   flutter_test:
