--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   encrypt: ^5.0.3
   local_auth: ^3.0.0
   change_app_package_name: ^1.5.0
+  crypto: ^3.0.7
 
 dev_dependencies:
   flutter_test:
